--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello, world!</title>
+</head>
+<body>
+<section class="container">
+  
+  <h1>GOOOD DAMNE</h1>
+
+  <%=body%>
+  <%-body%>
+</section>
+  
+</body>
 </html>
